--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rss",
+  "name": "@uqee/rss",
   "version": "1.2.2",
   "description": "RSS feed generator. Add RSS feeds to any project. Supports enclosures and GeoRSS.",
   "keywords": [
